Fix the unwanted scrollbar problem in Email notification. Signed-off-by: Peter Areewatanakul <Peter.Areewatanakul@ccci.org>

--- a/assets/OpsPortal/opsportal.css
+++ b/assets/OpsPortal/opsportal.css
@@ -130,7 +130,7 @@ the .op-widget class can contain a .op-widget-masthead class, a .op-widget-body 
 	position: relative; 
 	padding: 0 !important; 
 	margin: 0 !important; 
-	overflow-y: auto !important; 
+	overflow-y: auto; 
 }
 
 .op-stage-masthead, .op-block-masthead { 
